--- a/Resources/Private/Partials/Component/HeaderImage.html
+++ b/Resources/Private/Partials/Component/HeaderImage.html
@@ -7,7 +7,15 @@
                         <div class="col-xs-12">
                           <f:if condition="{currentComponent.image}">
                               <f:then>
-                                <f:image src="{currentComponent.image.uid}" alt="{currentComponent.name}" treatIdAsReference="TRUE" class="img-responsive" />
+                                <f:if condition="{currentComponent.imageMobile.uid}">
+                                    <f:then>
+                                        <f:image src="{currentComponent.image.uid}" alt="{currentComponent.name}" treatIdAsReference="TRUE" class="img-responsive hidden-xs " />
+                                        <f:image src="{currentComponent.imageMobile.uid}" alt="{currentComponent.name}" treatIdAsReference="TRUE" class="img-responsive visible-xs" />
+                                    </f:then>
+                                    <f:else>
+                                        <f:image src="{currentComponent.image.uid}" alt="{currentComponent.name}" treatIdAsReference="TRUE" class="img-responsive " />
+                                    </f:else>
+                                </f:if>
                               </f:then>
                               <f:else>
                                 <f:image src="{f:uri.resource(path: 'art/headerimage-komponente.jpg', extensionName: 'template')}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" />
@@ -22,11 +30,11 @@
                               <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}">
                             </a>
 
-                            <a class="headerimageToolbarBTN col-05 unvisible" href=""><img class="img-responsive" src="art/quad-bilderheader-blind.png"></a>
-                            <a class="headerimageToolbarBTN col-05 unvisible" href=""><img class="img-responsive" src="art/quad-bilderheader-blind.png"></a>
-                            <a class="headerimageToolbarBTN col-05 unvisible" href=""><img class="img-responsive" src="art/quad-bilderheader-blind.png"></a>
-                            <a class="headerimageToolbarBTN col-4 unvisible" href=""><img class="img-responsive" src="art/quad-bilderheader-blind.png"></a>
-                            <a class="headerimageToolbarBTN col-4 unvisible" href=""><img class="img-responsive" src="art/quad-bilderheader-blind.png"></a>
+                            <a class="headerimageToolbarBTN col-05 unvisible" href=""><img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}"></a>
+                            <a class="headerimageToolbarBTN col-05 unvisible" href=""><img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}"></a>
+                            <a class="headerimageToolbarBTN col-05 unvisible" href=""><img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}"></a>
+                            <a class="headerimageToolbarBTN col-4 unvisible" href=""><img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}"></a>
+                            <a class="headerimageToolbarBTN col-4 unvisible" href=""><img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}"></a>
                             <a class="headerimageToolbarBTN col-4" href="#anfrageKomponenten">
                               <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}">
                               <span>Komponenten anfragen</span>
@@ -56,14 +64,14 @@
                      <!-- RTB Logo Mobile-->
                     <div class="readyToBuildLogo visible-xs">
                         <div class="row">
-                            <div class="col-sm-1 onePxPadding"><img class="img-responsive" src="art-global/logo-readytobuild-var.png"></div>
+                            <div class="col-sm-1 onePxPadding"><img class="img-responsive" src="{f:uri.resource(path: 'art-global/logo-readytobuild-var.png', extensionName: 'template')}"></div>
                         </div>
                     </div>
 
                     <!-- Toolbar Mobile -->
                     <div class="headerimageToolbar visible-xs">
-                        <a class="headerimageToolbarBTN col-4" href="#weitereInformationen"><img class="img-responsive" src="art/icon-toolbar-info.png"><span>Details</span></a>
-                        <a class="headerimageToolbarBTN col-4" href="#anfrageKomponenten"><img class="img-responsive" src="art/icon-toolbar-anfrage.png"><span>Komponente anfragen</span></a>
+                        <a class="headerimageToolbarBTN col-4" href="#weitereInformationen"><img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}"><span>Details</span></a>
+                        <a class="headerimageToolbarBTN col-4" href="#anfrageKomponenten"><img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}"><span>Komponente anfragen</span></a>
 
                     </div>
 
