--- a/Resources/Private/Partials/System/Components.html
+++ b/Resources/Private/Partials/System/Components.html
@@ -15,7 +15,7 @@
 					<div class="owlQuad onePxPadding">
 						<div class="owlQuadText">
 							<h4 class="owlQuadTextHeadline">{component.name}</h4>
-							<p>{component.teaser}</p>
+							<p>{component.subtitle}</p>
 						</div>
 						<f:link.action action="index" controller="Component" pluginName="Components" pageUid="{settings.componentPage}" arguments="{item: component}">
              	<f:image src="{component.thumbnail.uid}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" />
