--- a/Resources/Private/Partials/System/MobileNavigation.html
+++ b/Resources/Private/Partials/System/MobileNavigation.html
@@ -12,13 +12,13 @@
 
         <div id="owlCarouselQuadsNavigationMobile" class="owl-carousel">
 
-        	<f:for each="{applications}" as="application">
+        	<f:for each="{systems}" as="system">
 
 	          <div class="item">
 	            <div class="owlQuad onePxPadding">
-	            	<f:link.action action="index" arguments="{application: application}" class="{f:if(condition: '{application}=={currentApplication}', then: 'active')}">
-	            		<f:image src="{application.thumbnail.uid}" alt="{application.name}" treatIdAsReference="TRUE" class="img-responsive" />
-	            		<span>{application.name}</span>
+	            	<f:link.action action="index" arguments="{item: system}" class="{f:if(condition: '{system}=={currentSystem}', then: 'active')}">
+	            		<f:image src="{system.thumbnail.uid}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" />
+	            		<span>{system.name}</span>
 	            	</f:link.action>
 	            </div>
 	          </div>
