--- a/Resources/Private/Templates/Component/Index.html
+++ b/Resources/Private/Templates/Component/Index.html
@@ -4,6 +4,7 @@
 		<!-- <_f:render partial="Component/MobileNavigation" arguments="{components: components}" /> -->
 		<f:render partial="Component/Applications" arguments="{applications: applications}" />
 		<f:render partial="Component/DummyContent" />
+		<f:render partial="Component/Contact" arguments="{currentComponent: currentComponent}" />
 	</f:then>
 	<f:else>
 		<f:render partial="Component/CategorySelector" arguments="{rows: rows}" />
