--- a/Resources/Private/Partials/Component/Applications.html
+++ b/Resources/Private/Partials/Component/Applications.html
@@ -3,6 +3,7 @@
         <h2>Diese Anwendungen könnten Sie auch interessieren</h2>
     </div>
 </div>
+
 <div class="row">
     <div class="col-sm-12">
          <!-- gradienten für pfeile der Navigation-->
@@ -13,24 +14,25 @@
 
         <div id="owlCarouselQuadsRelatedApplications" class="owl-carousel relatedObjects relatedObjectsApplications ">
             <f:for each="{applications}" as="application">
-            <div class="item">
-                <div class="owlQuad onePxPadding">
-                    <div class="owlQuadText">
-                        <h4 class="owlQuadTextHeadline">{application.name}</h4>
-                        <p>{application.teaser}</p>
+                <div class="item">
+                    <div class="owlQuad onePxPadding">
+                        <div class="owlQuadText">
+                            <h4 class="owlQuadTextHeadline">{application.name}</h4>
+                            <p>{application.subtitle}</p>
+                        </div>
+
+                        <f:link.action action="index" controller="Application" pluginName="Applications" pageUid="{settings.applicationPage}" arguments="{item: application}">
+                            <f:if condition="{application.thumbnail}">
+                                <f:then>
+                                    <f:image src="{application.thumbnail.uid}" alt="{application.name}" treatIdAsReference="TRUE" class="img-responsive" height="283c" width="283c"/>
+                                </f:then>
+                                <f:else>
+                                    <f:image src="{f:uri.resource(path: 'art/thumb-anwendung-laufbauhn.png', extensionName: 'template')}" alt="{application.name}" treatIdAsReference="TRUE" class="img-responsive" />
+                                </f:else>
+                            </f:if>
+                        </f:link.action>
                     </div>
-                    <a href="" class="">
-                        <f:if condition="{application.image}">
-                            <f:then>
-                                <f:image src="{application.image.uid}" alt="{application.name}" treatIdAsReference="TRUE" class="img-responsive" height="256c" width="256c"/>
-                            </f:then>
-                            <f:else>
-                                <f:image src="{f:uri.resource(path: 'art/thumb-anwendung-laufbauhn.png', extensionName: 'template')}" alt="{application.name}" treatIdAsReference="TRUE" class="img-responsive" />
-                            </f:else>
-                        </f:if>
-                    </a>
                 </div>
-            </div>
             </f:for>
         </div>
     </div>
