--- a/Resources/Private/Partials/System/HeaderImage.html
+++ b/Resources/Private/Partials/System/HeaderImage.html
@@ -32,8 +32,15 @@
                                 <div class="item cross-sections">
                                     <f:for each="{currentSystem.crossSections}" as="crossSection">
                                         <f:if condition="{crossSection.image}">
-                                            <f:image src="{crossSection.image.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive hidden-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
-                                            <f:image src="{crossSection.imageMobile.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive visible-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
+                                            <f:if condition="{crossSection.imageMobile.uid}">
+                                                <f:then>
+                                                    <f:image src="{crossSection.image.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive hidden-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
+                                                    <f:image src="{crossSection.imageMobile.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive visible-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
+                                                </f:then>
+                                                <f:else>
+                                                    <f:image src="{crossSection.image.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive hidden-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
+                                                </f:else>
+                                            </f:if>
                                         </f:if>
                                     </f:for>
                                 </div>
@@ -52,7 +59,7 @@
                             <a class="headerimageToolbarBTN col-05 unvisible" href="">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}">
                             </a>
-                            <a id="triggerFarbauswahl" class="headerimageToolbarBTN col-05" href="">
+                            <a id="triggerFarbauswahl" class="headerimageToolbarBTN col-05" href="" style="visibility: hidden;">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-farbauswahl.png', extensionName: 'template')}">
                             </a>
                             <a class="headerimageToolbarBTN col-05" href="#passendeKomponenten">
