--- a/Resources/Private/Partials/Application/MoreInformation.html
+++ b/Resources/Private/Partials/Application/MoreInformation.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div id="weitereInformationen" class="row">
             <div class="col-sm-6">
-                <h2>Details zu {currentApplication.name}</h2>
+                <h2>Details zu {application.name}</h2>
             </div>
         </div>
         <div class="row">
