--- a/Resources/Private/Partials/System/HeaderImage.html
+++ b/Resources/Private/Partials/System/HeaderImage.html
@@ -59,9 +59,9 @@
                             <a class="headerimageToolbarBTN col-05 unvisible" href="">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}">
                             </a>
-                            <a id="triggerFarbauswahl" class="headerimageToolbarBTN col-05" href="" style="visibility: hidden;">
+<!--                             <a id="triggerFarbauswahl" class="headerimageToolbarBTN col-05" href="" style="visibility: hidden;">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-farbauswahl.png', extensionName: 'template')}">
-                            </a>
+                            </a> -->
                             <a class="headerimageToolbarBTN col-05" href="#passendeKomponenten">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-komponenten.png', extensionName: 'template')}">
                             </a>
