--- a/Resources/Private/Partials/Component/HeaderImage.html
+++ b/Resources/Private/Partials/Component/HeaderImage.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="col-sm-7 onePxPadding">
 
-                              <f:render partial="HeaderCarousel" arguments="{items: currentComponent.parent.children, currentItem: currentComponent, fallbackImage: 'art/quad-bilderheader-komponente.png'}" />
+                              <f:render partial="HeaderCarousel" arguments="{items: currentComponent.parent.children, currentItem: currentComponent, fallbackImage: 'art/quad-bilderheader-komponente.png', variablePosImg: 1}" />
 
                             </div>
                         </div>
