--- a/Resources/Private/Partials/System/HeaderImage.html
+++ b/Resources/Private/Partials/System/HeaderImage.html
@@ -59,14 +59,17 @@
                             <a class="headerimageToolbarBTN col-05 unvisible" href="">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}">
                             </a>
+                            <a class="headerimageToolbarBTN col-05 unvisible" href="">
+                                <img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}">
+                            </a>
 <!--                             <a id="triggerFarbauswahl" class="headerimageToolbarBTN col-05" href="" style="visibility: hidden;">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-farbauswahl.png', extensionName: 'template')}">
                             </a> -->
-                            <a class="headerimageToolbarBTN col-05" href="#passendeKomponenten">
-                                <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-komponenten.png', extensionName: 'template')}">
+                            <a class="headerimageToolbarBTN col-05" href="#passendeKomponenten" title="Passende Komponenten">
+                                <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-komponenten.png', extensionName: 'template')}" alt="Passende Komponenten">
                             </a>
-                            <a class="headerimageToolbarBTN col-05" href="#weitereInformationen">
-                                <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}">
+                            <a class="headerimageToolbarBTN col-05" href="#weitereInformationen" title="weitere Informationen">
+                                <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}" alt="weitere Informationen">
                             </a>
                             <a class="headerimageToolbarBTN col-05 unvisible" href="">
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}">
