--- a/Resources/Private/Templates/System/Index.html
+++ b/Resources/Private/Templates/System/Index.html
@@ -6,7 +6,7 @@
 		<div class="container">
 			<f:render partial="System/Components" arguments="{currentSystem: currentSystem}" />
 
-			<f:render partial="System/MoreInformation" arguments="{currentSystem: currentSystem}" />
+			<!-- <f:render partial="System/MoreInformation" arguments="{currentSystem: currentSystem}" /> -->
 
 			<f:render partial="System/Contact" arguments="{currentSystem: currentSystem}" />
 		</div>
